Bug 348000 - print preview crashes Okular
Summary: print preview crashes Okular
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources macOS
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords: drkonqi
: 346671 352493 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-20 10:09 UTC by RJVB
Modified: 2015-09-09 19:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RJVB 2015-05-20 10:09:20 UTC
Application: okular (0.22.60)
KDE Platform Version: 4.14.7 (Compiled from sources)
Qt Version: 4.8.7
Operating System: Darwin 13.4.0 x86_64
Distribution (Platform): MacPorts Packages

-- Information about the crash:
- What I was doing when the application crashed:

I had a PDF document open and did a File/Print Preview. The crash ensued. I had a similar crash doing a Print Preview with Okular on Linux, with a different PDF document.

Okular 0.22.60 (v15.03.97-13-g8bc66f6) with KDELibs 4.14.7 and Qt 4.8.7

-- Backtrace:
Application: Okular (okular), signal: Segmentation fault: 11
(lldb) process attach --pid 28135
Process 28135 stopped
Executable module set to "/Applications/MacPorts/KDE4/okular.app/Contents/MacOS/okular".
Architecture set to: x86_64-apple-macosx.
(lldb) set set term-width 200
(lldb) thread info
thread #1: tid = 0x63d576, 0x00007fff8dceee20 libsystem_kernel.dylib`__wait4 + 8, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP

(lldb) bt all
* thread #1: tid = 0x63d576, 0x00007fff8dceee20 libsystem_kernel.dylib`__wait4 + 8, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP
  * frame #0: 0x00007fff8dceee20 libsystem_kernel.dylib`__wait4 + 8
    frame #1: 0x0000000107aee94e libkdeui.5.dylib`KCrash::startProcess(int, char const**, bool) [inlined] startProcessInternal(argc=<unavailable>, directly=<unavailable>) + 265 at kcrash.cpp:556
    frame #2: 0x0000000107aee845 libkdeui.5.dylib`KCrash::startProcess(argc=<unavailable>, argv=<unavailable>, waitAndExit=<unavailable>) + 21 at kcrash.cpp:538
    frame #3: 0x0000000107aeda79 libkdeui.5.dylib`KCrash::defaultCrashHandler(sig=<unavailable>) + 1209 at kcrash.cpp:441
    frame #4: 0x00007fff865665aa libsystem_platform.dylib`_sigtramp + 26
    frame #5: 0x00000001080a6b28 QtGui`QAction::setEnabled(bool) [inlined] QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data() const + 4 at qscopedpointer.h:135
    frame #6: 0x00000001080a6b24 QtGui`QAction::setEnabled(bool) [inlined] QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::pointer qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) at qglobal.h:2580
    frame #7: 0x00000001080a6b24 QtGui`QAction::setEnabled(bool) [inlined] QAction::d_func(this=0x0000000000000000) at qaction.h:67
    frame #8: 0x00000001080a6b24 QtGui`QAction::setEnabled(this=0x0000000000000000, b=false) + 4 at qaction.cpp:1113
    frame #9: 0x000000010dcf8dc8 okularpart.dylib`PageView::slotRelayoutPages(this=<unavailable>) + 600 at pageview.cpp:4139
    frame #10: 0x000000010dd0fd79 okularpart.dylib`PageView::qt_static_metacall(_o=0x00007fdcd6360d10, _c=<unavailable>, _id=<unavailable>, _a=<unavailable>) + 681 at pageview.moc:160
    frame #11: 0x000000010939d13e QtCore`QObject::event(this=0x00007fdcd6360d10, e=<unavailable>) + 638 at qobject.cpp:1222
    frame #12: 0x00000001080fef62 QtGui`QWidget::event(this=0x00007fdcd6360d10, event=0x00007fdcd637b610) + 4050 at qwidget.cpp:8859
    frame #13: 0x000000010841994d QtGui`QFrame::event(this=0x00007fdcd6360d10, e=0x00007fdcd637b610) + 45 at qframe.cpp:557
    frame #14: 0x0000000108492f05 QtGui`QAbstractScrollArea::event(this=0x00007fdcd6360d10, e=0x00007fdcd637b610) + 789 at qabstractscrollarea.cpp:996
    frame #15: 0x00000001080aebfb QtGui`QApplicationPrivate::notify_helper(this=<unavailable>, receiver=0x00007fdcd6360d10, e=0x00007fdcd637b610) + 251 at qapplication.cpp:4565
    frame #16: 0x00000001080b1b9d QtGui`QApplication::notify(this=<unavailable>, receiver=<unavailable>, e=<unavailable>) + 7693 at qapplication.cpp:4530
    frame #17: 0x00000001093890d6 QtCore`QCoreApplication::notifyInternal(this=<unavailable>, receiver=<unavailable>, event=<unavailable>) + 118 at qcoreapplication.cpp:955
    frame #18: 0x0000000109389c3e QtCore`QCoreApplicationPrivate::sendPostedEvents(receiver=0x00007fdcd637b610, event_type=0, data=0x00007fdcd3c0fd50) + 686 at qcoreapplication.h:231
    frame #19: 0x00007fff911925b1 CoreFoundation`__CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
    frame #20: 0x00007fff91183c62 CoreFoundation`__CFRunLoopDoSources0 + 242
    frame #21: 0x00007fff911833ef CoreFoundation`__CFRunLoopRun + 831
    frame #22: 0x00007fff91182e75 CoreFoundation`CFRunLoopRunSpecific + 309
    frame #23: 0x00007fff8f138a0d HIToolbox`RunCurrentEventLoopInMode + 226
    frame #24: 0x00007fff8f138685 HIToolbox`ReceiveNextEventCommon + 173
    frame #25: 0x00007fff8f1385bc HIToolbox`_BlockUntilNextEventMatchingListInModeWithFilter + 65
    frame #26: 0x00007fff8c47624e AppKit`_DPSNextEvent + 1434
    frame #27: 0x00007fff8c47589b AppKit`-[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122
    frame #28: 0x00007fff8c7d4e2e AppKit`-[NSApplication _realDoModalLoop:peek:] + 642
    frame #29: 0x00007fff8c80b505 AppKit`-[NSApplication runModalSession:] + 71
    frame #30: 0x00000001080634e1 QtGui`QEventDispatcherMac::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 593
    frame #31: 0x000000010938646f QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::QFlags(this=0x00007fff00000064) + 9 at qglobal.h:2434
    frame #32: 0x0000000109386466 QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::QFlags(this=0x00007fff00000064) at qglobal.h:2434
    frame #33: 0x0000000109386466 QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::operator|(f=<unavailable>) const + 59 at qeventloop.cpp:149
    frame #34: 0x000000010938642b QtCore`QEventLoop::exec(this=0x00007fff58c125b8, flags=(i = 64)) + 427 at qeventloop.cpp:204
    frame #35: 0x00000001084be3e7 QtGui`QDialog::exec(this=0x00007fff58c12610) + 247 at qdialog.cpp:562
    frame #36: 0x000000010dc83a3e okularpart.dylib`Okular::Part::slotPrintPreview(this=<unavailable>) + 526 at part.cpp:2408
    frame #37: 0x000000010dc85fc9 okularpart.dylib`Okular::Part::qt_static_metacall(_o=0x00007fdcd60e7270, _c=<unavailable>, _id=<unavailable>, _a=<unavailable>) + 905 at part.moc:206
    frame #38: 0x00000001093a2c0b QtCore`QMetaObject::activate(sender=0x00007fdcd61d5f00, m=<unavailable>, local_signal_index=<unavailable>, argv=<unavailable>) + 2363 at qobject.cpp:3638
    frame #39: 0x00000001080a6e89 QtGui`QAction::activate(QAction::ActionEvent) [inlined] QAction::triggered(this=0x00007fdcd61d5f00, _t1=false) + 233 at moc_qaction.cpp:277
    frame #40: 0x00000001080a6e61 QtGui`QAction::activate(this=0x00007fdcd61d5f00, event=<unavailable>) + 193 at qaction.cpp:1257
    frame #41: 0x0000000108059e11 QtGui`-[QCocoaMenuLoader qtDispatcherToQAction:] + 65
    frame #42: 0x00007fff8c694260 AppKit`-[NSApplication sendAction:to:from:] + 327
    frame #43: 0x00007fff8c6af1c8 AppKit`-[NSMenuItem _corePerformAction] + 394
    frame #44: 0x00007fff8c6aef04 AppKit`-[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 117
    frame #45: 0x00007fff8c6fe40d AppKit`-[NSMenu _internalPerformActionForItemAtIndex:] + 35
    frame #46: 0x00007fff8c6fe289 AppKit`-[NSCarbonMenuImpl _carbonCommandProcessEvent:handlerCallRef:] + 104
    frame #47: 0x00007fff8c6a4ff6 AppKit`NSSLMMenuEventHandler + 716
    frame #48: 0x00007fff8f1121d4 HIToolbox`DispatchEventToHandlers(EventTargetRec*, OpaqueEventRef*, HandlerCallRec*) + 892
    frame #49: 0x00007fff8f111787 HIToolbox`SendEventToEventTargetInternal(OpaqueEventRef*, OpaqueEventTargetRef*, HandlerCallRec*) + 385
    frame #50: 0x00007fff8f125880 HIToolbox`SendEventToEventTarget + 40
    frame #51: 0x00007fff8f15b640 HIToolbox`SendHICommandEvent(unsigned int, HICommand const*, unsigned int, unsigned int, unsigned char, void const*, OpaqueEventTargetRef*, OpaqueEventTargetRef*, OpaqueEventRef**) + 420
    frame #52: 0x00007fff8f18e228 HIToolbox`SendMenuCommandWithContextAndModifiers + 59
    frame #53: 0x00007fff8f18e1d0 HIToolbox`SendMenuItemSelectedEvent + 178
    frame #54: 0x00007fff8f18e0af HIToolbox`FinishMenuSelection(SelectionData*, MenuResult*, MenuResult*) + 94
    frame #55: 0x00007fff8f196085 HIToolbox`MenuSelectCore(MenuData*, Point, double, unsigned int, OpaqueMenuRef**, unsigned short*) + 718
    frame #56: 0x00007fff8f195cb1 HIToolbox`_HandleMenuSelection2 + 446
    frame #57: 0x00007fff8c61762c AppKit`_NSHandleCarbonMenuEvent + 284
    frame #58: 0x00007fff8c47652e AppKit`_DPSNextEvent + 2170
    frame #59: 0x00007fff8c47589b AppKit`-[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122
    frame #60: 0x00007fff8c46999c AppKit`-[NSApplication run] + 553
    frame #61: 0x0000000108063a9b QtGui`QEventDispatcherMac::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2059
    frame #62: 0x000000010938646f QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::QFlags(this=0x00007fff00000024) + 9 at qglobal.h:2434
    frame #63: 0x0000000109386466 QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::QFlags(this=0x00007fff00000024) at qglobal.h:2434
    frame #64: 0x0000000109386466 QtCore`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [inlined] QFlags<QEventLoop::ProcessEventsFlag>::operator|(f=<unavailable>) const + 59 at qeventloop.cpp:149
    frame #65: 0x000000010938642b QtCore`QEventLoop::exec(this=0x00007fff58c13d90, flags=(i = 0)) + 427 at qeventloop.cpp:204
    frame #66: 0x0000000109389687 QtCore`QCoreApplication::exec() + 199 at qcoreapplication.cpp:1227
    frame #67: 0x0000000106ff0ff5 okular`main(argc=<unavailable>, argv=<unavailable>) + 1301 at main.cpp:64
    frame #68: 0x00007fff91ef75fd libdyld.dylib`start + 1

  thread #2: tid = 0x63d577, 0x00007fff8dcef662 libsystem_kernel.dylib`kevent64 + 10, queue = 'com.apple.libdispatch-manager'
    frame #0: 0x00007fff8dcef662 libsystem_kernel.dylib`kevent64 + 10
    frame #1: 0x00007fff8660e421 libdispatch.dylib`_dispatch_mgr_invoke + 239
    frame #2: 0x00007fff8660e136 libdispatch.dylib`_dispatch_mgr_thread + 52

  thread #3: tid = 0x63d59c, 0x00007fff8dcee9aa libsystem_kernel.dylib`__select + 10, name = 'com.apple.CFSocket.private'
    frame #0: 0x00007fff8dcee9aa libsystem_kernel.dylib`__select + 10
    frame #1: 0x00007fff911cfa03 CoreFoundation`__CFSocketManager + 867
    frame #2: 0x00007fff8e4dc899 libsystem_pthread.dylib`_pthread_body + 138
    frame #3: 0x00007fff8e4dc72a libsystem_pthread.dylib`_pthread_start + 137
    frame #4: 0x00007fff8e4e0fc9 libsystem_pthread.dylib`thread_start + 13

  thread #4: tid = 0x63d645, 0x00007fff8dceaa1a libsystem_kernel.dylib`mach_msg_trap + 10
    frame #0: 0x00007fff8dceaa1a libsystem_kernel.dylib`mach_msg_trap + 10
    frame #1: 0x00007fff8dce9d18 libsystem_kernel.dylib`mach_msg + 64
    frame #2: 0x00007fff91183f15 CoreFoundation`__CFRunLoopServiceMachPort + 181
    frame #3: 0x00007fff91183539 CoreFoundation`__CFRunLoopRun + 1161
    frame #4: 0x00007fff91182e75 CoreFoundation`CFRunLoopRunSpecific + 309
    frame #5: 0x00007fff8c61605e AppKit`_NSEventThread + 144
    frame #6: 0x00007fff8e4dc899 libsystem_pthread.dylib`_pthread_body + 138
    frame #7: 0x00007fff8e4dc72a libsystem_pthread.dylib`_pthread_start + 137
    frame #8: 0x00007fff8e4e0fc9 libsystem_pthread.dylib`thread_start + 13

  thread #5: tid = 0x63d9bb, 0x00007fff8dcee716 libsystem_kernel.dylib`__psynch_cvwait + 10, name = 'GSRendererThread'
    frame #0: 0x00007fff8dcee716 libsystem_kernel.dylib`__psynch_cvwait + 10
    frame #1: 0x00007fff8e4dec3b libsystem_pthread.dylib`_pthread_cond_wait + 727
    frame #2: 0x00000001092798fb QtCore`QWaitConditionPrivate::wait(this=<unavailable>, time=<unavailable>) + 203
    frame #3: 0x000000010927975f QtCore`QWaitCondition::wait(this=0x00007fdcd3e3d918, mutex=0x00007fdcd3e3d910, time=18446744073709551615) + 111 at qwaitcondition_unix.cpp:158
    frame #4: 0x000000010927531e QtCore`QSemaphore::acquire(this=0x00007fdcd6262cb0, n=1) + 126 at qsemaphore.cpp:144
    frame #5: 0x000000010cca274d okularGenerator_ghostview.so`GSRendererThread::run(this=0x00007fdcd6262ca0) + 93 at rendererthread.cpp:50
    frame #6: 0x0000000109278272 QtCore`QThreadPrivate::start(arg=<unavailable>) + 386 at qthread_unix.cpp:352
    frame #7: 0x00007fff8e4dc899 libsystem_pthread.dylib`_pthread_body + 138
    frame #8: 0x00007fff8e4dc72a libsystem_pthread.dylib`_pthread_start + 137
    frame #9: 0x00007fff8e4e0fc9 libsystem_pthread.dylib`thread_start + 13

  thread #6: tid = 0x63de23, 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff8e4ddf08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff8e4e0fb9 libsystem_pthread.dylib`start_wqthread + 13

  thread #7: tid = 0x63de24, 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff8e4ddf08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff8e4e0fb9 libsystem_pthread.dylib`start_wqthread + 13

  thread #8: tid = 0x63de25, 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #0: 0x00007fff8dceee6a libsystem_kernel.dylib`__workq_kernreturn + 10
    frame #1: 0x00007fff8e4ddf08 libsystem_pthread.dylib`_pthread_wqthread + 330
    frame #2: 0x00007fff8e4e0fb9 libsystem_pthread.dylib`start_wqthread + 13
(lldb) detach
Process 28135 detached
(lldb) (lldb) quit

Possible duplicates by query: bug 347995, bug 347967, bug 347957, bug 347954, bug 347953.

Reported using DrKonqi
Comment 1 RJVB 2015-05-21 23:47:25 UTC
Git commit 42e03ce9bf6ec9d4c7f1c19c10a14c886dbd7427 by René J.V. Bertin.
Committed on 21/05/2015 at 23:47.
Pushed by rjvbb into branch 'master'.

Initialise PageViewPrivate::aFitWindowToPage to NULL and
check against NULL consistently before calling aFitWindowToPage->setEnabled().
REVIEW: 123876

M  +3    -1    ui/pageview.cpp

http://commits.kde.org/okular/42e03ce9bf6ec9d4c7f1c19c10a14c886dbd7427
Comment 2 Albert Astals Cid 2015-05-24 04:18:04 UTC
*** Bug 346671 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Marten 2015-09-09 19:37:37 UTC
*** Bug 352493 has been marked as a duplicate of this bug. ***