Initialise PageViewPrivate::aFitWindowToPage to NULL and check against NULL consistently before calling aFitWindowToPage->setEnabled().

BUG: 348000
REVIEW: 123876